package Logica;

public enum EstadoIntercambio {
    PENDIENTE_CONFIRMACION,
    PENDIENTE_CONTRAOFERTA,
    EN_PROCESO,
    COMPLETADO,
    CANCELADO
}
