package VentanasGUI;

import javax.swing.*;

public class Oferta {
    private JButton ACEPTARButton;
    private JButton RECHAZARButton;
}
